plugins {
    id 'java'
    id 'com.github.johnrengelman.shadow' version '4.0.4'
}

group 'cn.enaium'
version '1.4'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.ow2.asm:asm-tree:9.2'
    implementation 'org.ow2.asm:asm-commons:9.2'
}

jar {
    manifest.attributes(
            'Manifest-Version': 1.0,
            'Main-Class': 'cn.enaium.paramorphism.decrypt.ParamorphismDecrypt'
    )
}

shadowJar {
    dependencies {
        include(dependency('org.ow2.asm:asm'))
        include(dependency('org.ow2.asm:asm-tree'))
        include(dependency('org.ow2.asm:asm-commons'))
    }
}

build.dependsOn shadowJar